[workspace]
resolver = "2"
members = [
    "dioxus/ui",
    "dioxus/web",
    # "dioxus/desktop",
    # "dioxus/mobile",
    "dioxus/api",
		"plugin_sdk"
]

[workspace.dependencies]
dioxus = { version = "0.7.1" }

# workspace
# ui = { path = "dioxus/ui" }
# api = { path = "dioxus/api" }
plugin_lib = { path = "plugin_sdk" }
